--- a/index.html
+++ b/index.html
@@ -3,32 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HSK Learning - Login</title>
+    <title>HSK - Login</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body style="background-image: url(photo/ch-background.jpg);">
-    <div class="container">
-        <img src="photo/logo-l.png" alt="" style="width: 43%; height: 20%; border:20px; border-radius: 30px; box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);">
-        <div class="auth-container">
-            <!-- Login Form -->
-            <div class="form-container" id="login-form">
-                <h2>Login</h2>
-                <form id="login">
-                    <div class="form-group">
-                        <label for="login-email">Email:</label>
-                        <input type="email" id="login-email" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="login-password">Password:</label>
-                        <input type="password" id="login-password" required>
-                    </div>
-                    <button type="submit" class="btn">Login</button>
-                </form>
-                <!-- Removed registration prompt -->
-            </div>
-        </div>
+<body>
+    <div class="login-container">
+        <h1>HSK Login</h1>
+        <form id="loginForm">
+            <input type="text" id="username" placeholder="Username" required>
+            <input type="password" id="password" placeholder="Password" required>
+            <button type="submit">Login</button>
+        </form>
+        <div id="error-message"></div>
     </div>
-
     <script src="auth.js"></script>
 </body>
 </html>
