--- a/public/admin.html
+++ b/public/admin.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="admin.css">
 </head>
 <body>
-    <h2>Admin Panel - User Management</h2>
+     <div class="admin-header">
+        <h2>Admin Panel - User Management</h2>
+        <button id="logoutBtn" class="logout-btn">Logout</button>
+    </div>
 
     <form id="addUserForm">
         <input type="text" id="newUsername" placeholder="Username" required />
