--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Student Login</title>
+  <title>Hanqiao Login</title>
   <link rel="stylesheet" href="auth.css" />
 </head>
 <body>
   <form id="loginForm">
     <div class="login-header">
-      <h1 class="login-title">🎓 Start Learning Now</h1>
-      <p class="login-subtitle">登录开启成功之路</p>
+      <h1 class="login-title">🎓 Begin Your Success</h1>
+      <p class="login-subtitle">登录，开启你的汉语之旅</p>
     </div>
     
     <div class="input-group">
