--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="icon" type="image/png" href="photo/logo-p.png" sizes="192x192">
+  <link rel="icon" type="image/png" href="photo/main-back-newyear.jpg" sizes="192x192">
   <title>Hanqiao Login</title>
   <link rel="stylesheet" href="auth.css" />
 </head>
